# satquest-core

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: github_webhook.py
app/api/v1/: github_oauth.py  github_webhook.py  users.py
app/core/: config.py  logging_config.py
app/models/: github_models.py
app/services/: github_services.py  lightning.py  supabase.py
app/tests/: conftest.py  test_github_webhook.py
tests/: __init__.py  test_github_webhook.py
