[project]
name = "satquest-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Arsh",email = "ramezan.mahmoodi.arshia@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-multipart (>=0.0.9,<0.1.0)",
    "supabase (>=2.15.0,<3.0.0)",    "breez-sdk-liquid (>=0.8.0,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.27.0"